<resources>
    <string name="app_name">busscheck</string>

    <string name="horarios">Horários</string>
    <string name="manha">Manhã</string>
    <string name="tarde">Tarde</string>
    <string name="noite">Noite</string>
    <string name="segunda">Seg</string>
    <string name="terca">Ter</string>
    <string name="quarta">Qua</string>
    <string name="quinta">Qui</string>
    <string name="sexta">Sex</string>
    <string name="registrar">Registrar</string>
    <string name="home">Home</string>
    <string name="dados">Dados</string>
    <string name="configuracao">Configuração</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="manter_me_logado">Manter-me logado</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar_se">CADASTRAR-SE</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="id_universitario">ID Universitário</string>
    <string name="e_mail">E-mail</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="cadastro">Cadastro</string>
    <string name="informacoes">Informacões</string>
    <string name="confirmacoes">Numero de confirmações:</string>
    <string name="transportes">Numero de transportes:</string>
    <string name="confirme_sua_presenca">Confirme sua presença!</string>
    <string name="partiu">Partiu        ✓</string>
    <string name="dados_pessoais">Dados pessoais</string>
    <string name="atualizar">Atualizar</string>
    <string name="sair">Sair</string>
    <string name="notificacoes">Notificações:</string>
    <string name="auto_confirmacao">Auto Confirmação</string>
    <string name="auto_recusar">auto recusar</string>
    <string-array name="pontos_de_embarque">
        <item>Ponto de embarque</item>
        <item>Praça (Russas)</item>
        <item>Cartorio (Russas)</item>
        <item>Praça (Flores)</item>
        <item>Posto (Flores)</item>
    </string-array>
</resources>
