<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dados"
    android:background="@drawable/gradient">


    <Button
        android:id="@+id/buttonTransitionSetings2"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toEndOf="@+id/buttonTransitionData2"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonTransitionData2"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonTransitionHome2"
        app:layout_constraintTop_toBottomOf="@+id/buttonAtualize"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonTransitionDate2"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAtualize"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonTransitionHome2"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonTransitionDate2"
        app:layout_constraintTop_toBottomOf="@+id/buttonAtualize"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="47dp"
        android:layout_height="17dp"
        android:layout_marginStart="44dp"
        android:gravity="center"
        android:text="@string/horarios"
        android:textColor="@color/Text"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/buttonTransitionHome2"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:text="@string/configuracao"
        android:textColor="@color/Text"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTransitionSetings2"
        app:layout_constraintVertical_bias="0.272"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="45dp"
        android:layout_height="14dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/dados"
        android:textColor="@color/YellowColor"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/buttonTransitionData2"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="52dp"
        android:layout_height="14dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/home"
        android:textColor="@color/Text"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView843434"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTransitionDate2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/buttonAtualize"
        android:layout_width="120dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style"
        android:text="@string/atualizar"
        android:textColor="@color/TextWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText9"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="258dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/Text"
        android:textColorHint="@color/Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText10"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="258dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColor="@color/Text"
        android:textColorHint="@color/Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="258dp"
        android:layout_height="49dp"
        android:layout_marginBottom="188dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/id_universitario"
        android:inputType="textPersonName"
        android:textColor="@color/Text"
        android:textColorHint="@color/Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText11"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="258dp"
        android:layout_height="49dp"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/sobrenome"
        android:inputType="textPersonName"
        android:textColor="@color/Text"
        android:textColorHint="@color/Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText12"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="258dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:editable="false"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:textColor="@color/Text"
        android:textColorHint="@color/Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dados_pessoais"
        android:textColor="@color/Text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="203dp"
        android:layout_height="121dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/buss_effect" />
</android.support.constraint.ConstraintLayout>